<resources>
    <string name="app_name">Internet Marketing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Internet Marketing</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_content">Content</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_communicate">Communicate</string>
    <string name="content_item_dummy">Content</string>
    <string name="frame_1_title">Что такое интернет-маркетинг?</string>
    <string name="frame_1_text_1">Интернет-маркетинг — это знания (навыки), которые помогают работать с электронными каналами (SEO, SMM, контекстная реклама) и привлекать клиентов из интернета. Где увеличить бюджет, как правильно посчитать доходность каждого потока трафика на сайт.</string>
    <string name="frame_1_text_2">Сейчас интернет-маркетинг — это о прибыли и принятии решений о той или иной рекламе.</string>
    <string name="frame_2_title">Как создать бизнес в интернете?</string>
    <string name="frame_2_text_1">Прежде чем создавать сайт рекомендуется изучить всех конкурентов в интернете в вашем регионе. Например ниша: строительство каркасных домов в Москве. Изучаем конкурентов: прямых и косвенных и выписываем преимущества и недостатки.</string>
    <string name="frame_2_text_2">Находим сайты-конкуренты с помощью сервиса seranking.com</string>
    <string name="frame_2_text_3">Переходим на каждый из сайтов и внимательно изучаем уникальное торговое предложение (УТП) и структуру сайтов:</string>
    <string name="frame_2_text_4">Сокращенный пример анализа компания Теремъ - https://www.terem-pro.ru</string>
    <string name="frame_2_text_5">Выводы: лучше начинать с одной категории: дома, бани или беседки, обязательно наличие офлайн выставки. Нужно четкое понимание товара-локомотива, цен, гарантий, подключение банков-партнеров для использования рассрочек и акций.</string>
    <string name="frame_2_text_6">Сокращенный пример анализа компании по продаже радиоуправляемых моделей https://rc-today.ru</string>
    <string name="frame_2_text_7">Выводы: лучше начинать с 5–10 категорий, чтобы создать больший ассортимент товаров на сайте. Возможно работать по предзаказу для новых моделей, поступающих на рынок. Изучать какие детали к моделям заказывают пользователи. Наличие офлайн магазина вызовет бо́льшее доверие.</string>
    <string name="frame_2_text_8">Сокращенный пример анализа студии маникюра https://artliknails.ru</string>
    <string name="frame_2_text_9">Выводы: лучше начинать с оказания одной услуги, например женского маникюра, возможно с выездом на дом. Продавать услуги можно через инстаграм, подключив платную рекламу в инстаграме. Продают в данном секторе фотографии выполненных работ, чем их больше, тем лучше. Рекомендуется постоянно добавлять фото новых работ.</string>
    <string name="frame_2_text_10">С определенной периодичностью возвращайтесь к пересмотру сайтов-конкурентов для поиска новых фишек, товаров, услуг, гарантий.</string>
    <string name="frame_2_text_11">Создаем сайт</string>
    <string name="frame_2_text_12">Создаем сайт визитку или интернет-магазин. Можно начать с конструктора сайтов, это в разы быстрее и дешевле. Сайт уже будет оптимизирован под мобильные устройства, быструю загрузку страниц и оплату пластиковыми карточками.</string>
    <string name="frame_2_text_13">И вы течение 2-5 дней после разработки получите первые заказы. Сначала купите домен и привяжите к конструктору сайтов:</string>
    <string name="frame_2_text_14">Привязка домена поспособствует продвижению, запоминаемости и в будущем упростит возможный перенос сайта на собственную CMS. Прикупить домен можно по ссылке https://www.reg.ru/</string>
    <string name="frame_2_text_15">Добавьте больше отзывов клиентов, кейсов, цифр. Важно вызывать доверие у потенциального клиента и создать ценность продукта.</string>
    <string name="frame_2_text_16">Настройка целей</string>
    <string name="frame_2_text_17">В идеале на каждый канал подключаем отдельный телефон с детализаций по запросам из контекстной рекламы, чтобы понимать какие запросы приносят прибыль и периодически пересматривать, и отключать не рабочие.</string>
    <string name="frame_2_text_18">Тест сайта с помощью контекстной рекламы</string>
    <string name="frame_2_text_19">После того, как создали сайт или группу в социальных сетях (инстаграме, вконтакте) и настроили цели, затем тестируем её на конверсию с помощью платной рекламы: яндекс директа, рекламы в фейсбуке или вконтакте.</string>
    <string name="frame_2_text_20">Обязательно подключаем ретаргетинг/ремаркетинг в яндекс директе, google adwords, фейсбуке, вконтакте. Ретаргетингом (преследованием) догоняем пользователей, которые уже посетили наш сайт.</string>
    <string name="frame_2_text_21">Каждый повторный контакт с нашим сайтом повышает возможность покупки товара или услуги. Ретаргетинг повышает лояльность к вашего бренду и делает дешевле итоговую стоимость заявок/звонков с сайта. Используйте ретаргетинг!</string>
    <string name="frame_2_text_22">Настройку контекстной рекламы на старте лучше заказать у фри-лансеров. Дальше вы будете постепенно изучать данный инструмент, в том числе общаясь с фри-лансером.</string>
    <string name="frame_2_text_23">Найти исполнителя можно на сайтах:</string>
    <string name="frame_2_text_24">Начать можно с рекламного бюджета в 10 000 -30 000 руб в месяц. После месяца тестирования вы должны понимать стоимость заявки по каждому из каналов рекламы и понимать вашу прибыль, окупаемость и сделать выводы.</string>
    <string name="frame_2_text_25">После общения по телефону с клиентами и изучения заявок с вашего сайта придет понимание целевой аудитории (пол, возраст, демография). Это информация будет полезна для корректировки рекламных компаний в контексте, фейсбуке, вконтакте.</string>
    <string name="frame_2_text_26">Кроме пола и возраста можно повысить ставки для пользователей мобильных устройств.</string>
    <string name="frame_3_text_1">SEO (поисковое продвижение)</string>
    <string name="frame_3_text_2">SEO (поисковое продвижение) – это действия направленные на улучшение видимости сайта в поисковых системах. Главная цель – это трафик из поисковиков яндекса и гугла.</string>
    <string name="frame_3_text_3">План подготовки сайта при создании:</string>
    <string name="frame_3_text_4">SEO-аудит</string>
    <string name="frame_3_text_5">После создания и наполнения сайта контентом рекомендуется произвести seo-аудит. Для корректировки заголовков h1, тайтлов, контента, редиректов, удаления битых ссылок и т.д.</string>
    <string name="frame_3_text_6">Инструменты:</string>
    <string name="frame_3_text_7">После аудита вносим корректировки. Правим, если нужно тайтлы, заголовки, контент удаляем битые ссылки, настраиваем редиректы.</string>
    <string name="frame_3_text_8">Коммерческие факторы</string>
    <string name="frame_3_text_9">Для коммерческих сайтов важно указание телефонов в видном месте на сайте. Также наличие страницы контакты с указанием телефонов, e-mail, адреса, карты проезда.</string>
    <string name="frame_3_text_10">Как получить больше трафика?</string>
    <string name="frame_3_text_11">Создаем блог (информационный раздел) и пишем статьи по нашей тематике. Рекомендуется минимум 30 статей в месяц. Лучше по 100 статей в месяц, заказать можно на бирже - https://www.etxt.biz</string>
    <string name="frame_3_text_12">Примеры блогов:</string>
    <string name="frame_3_text_13">Для интернет-магазинов можно дополнительно использовать тегирование для создания дополнительных страниц - https://pgdv.ru/blog/tegirovanie-sajta</string>
    <string name="frame_3_text_14">Ссылки</string>
    <string name="frame_3_text_15">После создания и оптимизации проекта рекомендуется 1-2 месяца потестировать его с помощью контекстной рекламы, затем поняв прибыльные категории, товары начинать работать с ссылочной массой.</string>
    <string name="frame_3_text_16">Покупать ссылки лучше близкой тематики и вашего региона, затем уже смежных тематик и общего региона. Например: агентство недвижимости в Вологде. Покупаем ссылки на всех сайтах Вологды и все что связано с недвижимостью в Вологде и по всей России.</string>
    <string name="frame_3_text_17">Для покупки используем биржи ссылок с разовой оплатой за ссылку:</string>
    <string name="frame_3_text_18">Лучше использовать анкоры (текста ссылок) вида:</string>
    <string name="frame_3_text_19">Это обезопасит вас от анкорного переспама в ссылках. В месяц можно тратить от 10 000 руб на ссылки. Покупая их на главную страницу и категории/подкатегории, которые приносят прибыль и находятся в приделах топ 10, что приблизить их к топ 1.</string>
    <string name="frame_3_text_20">Для профи изучать ссылочную массу конкурентов можно используя - https://ahrefs.com/.</string>
    <string name="frame_3_text_21">Проверка позиций и трафика</string>
    <string name="frame_3_text_22">Каждые 2 недели можно проверять позиции с помощью - https://topvisor.com.</string>
    <string name="frame_3_text_23"><![CDATA[Трафик можно смотреть в отчете яндекс метрики: Отчеты -> Стандартные отчеты -> Источники, сводка.]]></string>
    <string name="frame_4_text_1">Контекстная реклама</string>
    <string name="frame_4_text_2">Контекстная реклама — это объявления (текстовые, графические, видео), которые показываются пользователям в соответствии с их поисковыми запросами, интересами или поведением в интернете. Контекстная реклама показывается в поисковых системах, на различных сайтах, в мобильных приложениях и т.д.</string>
    <string name="frame_4_text_3">Если вы впервые планируете запускать контекстную рекламу в яндекс директ, google adwords, то рекомендуем обратиться к профильным специалистам.</string>
    <string name="frame_4_text_4">Найти исполнителя можно на сайтах:</string>
    <string name="frame_4_text_5">Самостоятельное изучение яндекс директ:</string>
    <string name="frame_4_text_6">Курсы п контекстной рекламе:</string>
    <string name="frame_5_text_1">SMM (продвижение в социальных сетях)</string>
    <string name="frame_5_text_2">Список шагов для запуска кампаний:</string>
    <string name="frame_5_text_3">Продвижение в инстаграме:</string>
    <string name="frame_5_text_4">Продвижение во вконтакте:</string>
    <string name="frame_5_text_5">Полезные книги по теме</string>
    <string name="frame_6_text_1">Контент-маркетинг</string>
    <string name="frame_6_text_2">Контент-маркетинг – это распространение полезного контента, который не является прямой рекламой, но который косвенно убеждает аудиторию принять необходимое решение о покупке товара или услуги.</string>
    <string name="frame_6_text_3">Способы распространения информационного контента могут быть самыми разнообразными: сайты, блоги, социальные сети, книги, журналы, подкасты, семинары. Ценный контент должен быть уникальным и полезным.</string>
    <string name="frame_6_text_4">Цели контент-маркетинга</string>
    <string name="frame_6_text_5">Как запустить успешный контент-маркетинг</string>
    <string name="frame_6_text_6">Примеры статей</string>
    <string name="frame_6_text_7">Развлекательный, потенциально популярный контент с цепляющими заголовками</string>
    <string name="frame_6_text_8">Полезный контент, ГОСТы, СНИПы, правила оформления и т.д.</string>
    <string name="frame_6_text_9">Обзорный, обучающий контент.</string>
    <string name="frame_6_text_10">Обзоры, обзоры и еще раз обзоры, топ 10 тех или иных предметов, софта и т.д.</string>
    <string name="frame_7_text_1">Аналитика</string>
</resources>