<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/frame_3_text_1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:srcCompat="@color/black" />


            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/ris8" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_2" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_3" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="1. Изучить структуру категорий/подкатегорий продуктов у конкурентов и использовать в своем будущем проекте. Не более 3 кликов должен быть доступ к каждой из страниц. \n2. Рекомендуется добавлять текста в 1500-2000 знаков в каждую из категорий/подкатегорий. На карточках товаров может быть не уникальный контент. \n3. Важно настроить заголовки h1 и тайтлы на основе списка запросов, при этом упоминая город. Пример заголовка h1: Радиоуправляемые машинки. Пример тайтла: Радиоуправляемые машинки в Москве купить или узнать цену. \n4. Для сайта услуг изучить структуру контента по смысловым блокам и оформление у конкурентов. Например, наличие таблиц с указанием цен, фото выполненных работ, отзывы, списки преимуществ. " />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_4" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_5" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_6" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="1. https://wordstat.yandex.ru/ - для подбора запросов. Руководство по вордстату. Для профессионалов Key Collector.  \n2. Seo screaming frog – для проверки на дубли страниц, тайтлов, отсутствие битых ссылок, настройки редиректов. Подробное руководство - https://www.youtube.com/results?search_query=Seo+screaming+frog+  \n3. Перепроверка контента на уникальность – программа AntiPlagiarism.NET \n4. Проверка на мобильность - https://search.google.com/test/mobile-friendly?hl=ru \n5. Проверка на скорость загрузки - https://developers.google.com/speed/pagespeed/insights/?hl=ru  " />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_7" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_8" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_9" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_10" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_11" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_12" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=" https://mag.auto.ru  \n https://texterra.ru/blog/  \n https://zaochnik.ru/blog/  \n https://1cloud.ru/blog " />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_13" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_14" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_15" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_16" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_17" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=" https://www.miralinks.ru/ \n https://gogetlinks.net/ \n https://webartex.ru/ \n https://blogun.ru/  " />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_18" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=" http://название-вашего-сайта.ru \n название-вашего-сайта.ru \n название-вашего-сайта \n http://название-вашего-сайта/категория " />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_19" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_20" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_21" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_22" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/ris9" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frame_3_text_23" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>