<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/frame_6_text_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:srcCompat="@color/black" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ris13" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/frame_6_text_2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_6_text_3" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_6_text_4" />

        <TextView
            android:id="@+id/textView76"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Привлечение трафика \n Получение заявок, звонков \n Повышение вовлеченности клиентов \n Повышение узнаваемости бренда \n Повышение лояльности пользователей " />

        <TextView
            android:id="@+id/textView77"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_6_text_5" />

        <TextView
            android:id="@+id/textView78"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Исследуйте целевую аудиторию и статьи конкурентов \n Напишите контент-план (частота публикаций на месяц вперед) \n Предоставляйте качественный контент \n Используйте разные типы контента \n Создавайте цепляющие заголовки \n Придерживайтесь частоты публикаций (не менее 30 статей в месяц) " />

        <TextView
            android:id="@+id/textView79"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_6_text_6" />

        <TextView
            android:id="@+id/textView81"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_6_text_7" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ris14" />

        <TextView
            android:id="@+id/textView82"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_6_text_8" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ris15" />

        <TextView
            android:id="@+id/textView83"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_6_text_9" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ris16" />

        <TextView
            android:id="@+id/textView84"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_6_text_10" />

    </LinearLayout>
    </ScrollView>

</FrameLayout>